--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>SMART | PT. PLN (Persero)</title>
+    <title>SMART | Pusmanpro</title>
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> -->
     <link rel="icon" type="image/png" href="./static/img/logo/favicon.ico">
     <script src="https://www.google.com/recaptcha/api.js?render=explicit&hl=id" async defer></script>
